--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <style>
     .btn-search {
-        background-color: #fe424d;
+        background-color: #3b02e6;;
         color: #fff;
         border-radius: 25px;
         padding: 0 1rem 0 1rem;
@@ -9,7 +9,7 @@
         align-items: center;
     }
     .btn-search:hover {
-        background-color: #fe424d;
+        background-color: #3b02e6;;
         color: #fff;
     }
     .search-inp {
@@ -22,7 +22,9 @@
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/listings"><i class="fa-brands fa-airbnb"></i></a>
+        <a class="navbar-brand" href="/listings">
+            <i class="fa-brands fa-airbnb" style="color: #3b02e6;"></i>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" ><span>
             class="navbar-toggler-icon"></span>
         </button>
