--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,9 +2,7 @@
 
     <div class="row mt-3">
         <div class="col-8 offset-3">
-            <h3>
-                <%= listing.title %>
-            </h3>
+            <h3><%= listing.title %></h3>
         </div>
         <div class="card col-6 offset-3 show-card listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
@@ -20,7 +18,7 @@
 
         <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
         <div class="btns">
-            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark show-btn col-1 offset-3 edit-btn">Edit</a>
 
             <form action="/listings/<%= listing._id %>?_method=DELETE" method="post">
                 <button class="btn btn-dark offset-5">Delete</button>
@@ -60,7 +58,7 @@
                         required></textarea>
                     <div class="invalid-feedback">Please enter some comments for review </div>
                 </div>
-                <button class="btn btn-outline-dark">Submit</button>
+                <button class="btn btn-outline-dark btn-revSubmit">Submit</button>
             </form>
             <hr />
         <% } %>
