--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -17,7 +17,7 @@
                 <input name="password" id="password" type="password" class="form-control" required/>
             </div>
 
-            <button class="btn btn-success">Login</button>
+            <button class="btn btn-success login-btn">Login</button>
 
         </form>
     </div>
