--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -22,7 +22,7 @@
                 <input name="password" id="password" type="password" class="form-control" required/>
             </div>
 
-            <button class="btn btn-success">SignUP</button>
+            <button class="btn btn-success signup-btn">SignUP</button>
 
         </form>
     </div>
